--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "ember-simple-auth": "^1.3.0",
     "ember-source": "~2.12.0",
     "ember-welcome-page": "^2.0.2",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "semantic-ui-ember": "^2.0.1"
   },
   "engines": {
     "node": ">= 4"
