--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.6",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^3.1.0",
+    "ember-cli-sass": "^6.1.3",
     "ember-cli-scaffold": "^2.0.0",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
@@ -37,8 +38,7 @@
     "ember-simple-auth": "^1.3.0",
     "ember-source": "~2.12.0",
     "ember-welcome-page": "^2.0.2",
-    "loader.js": "^4.2.3",
-    "semantic-ui-ember": "^2.0.1"
+    "loader.js": "^4.2.3"
   },
   "engines": {
     "node": ">= 4"
