--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "ember-cli": "2.12.2",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
+    "ember-cli-chart": "^3.2.0",
+    "ember-cli-chartjs": "^2.4.0",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-htmlbars": "^1.1.1",
