--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.6",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-moment-shim": "^3.3.0",
     "ember-cli-qunit": "^3.1.0",
     "ember-cli-sass": "^6.1.3",
     "ember-cli-scaffold": "^2.0.0",
@@ -38,6 +39,7 @@
     "ember-data": "^2.12.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.6.0",
+    "ember-moment": "^7.3.1",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "^1.3.0",
     "ember-source": "~2.12.0",
