--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.12.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-highcharts": "^0.5.4",
     "ember-load-initializers": "^0.6.0",
     "ember-moment": "^7.3.1",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "^1.3.0",
     "ember-source": "~2.12.0",
+    "ember-websockets": "^7.0.2",
     "ember-welcome-page": "^2.0.2",
+    "highcharts": "^5.0.12",
     "loader.js": "^4.2.3"
   },
   "engines": {
