--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ember-cli-scaffold": "^2.0.0",
     "ember-cli-shims": "^1.0.2",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-styles-reloader": "^0.1.8",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.12.0",
     "ember-export-application-global": "^1.0.5",
